# claude-code-sdk-langchain

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  PYPI_UPLOAD_GUIDE.md  README.md  __INDEX.md  pixi.toml  pyproject.toml  test_simple.py
data/: __INDEX.md
docs/: IMPORTANT_MODEL_NOTE.md  TEMPERATURE_MAX_TOKENS_INVESTIGATION.md  VALIDATION_SUMMARY.md  __INDEX.md
docs/archive/: VALIDATION_REPORT_2025-09-30_FR.md  __INDEX.md
examples/: basic_usage.py
scripts/: __INDEX.md  deploy.py
specs/: README.md  TEST_CONFIGURATION.md  __INDEX.md  __init__.py  flow_basic_chat.md  flow_basic_chat_test.py  flow_error_handling.md  flow_error_handling_test.py  flow_langchain_integration.md  flow_langchain_integration_test.py  flow_session_management.md  flow_session_management_test.py  flow_streaming.md  flow_streaming_test.py  test_helpers.py
src/: __INDEX.md  __init__.py
src/claude_code_langchain/: __init__.py  chat_model.py  message_converter.py
