[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-langchain"
version = "0.1.0"
description = "LangChain adapter for Claude via Claude Code SDK - prototype without API costs"
readme = "README.md"
authors = [
    {name = "Stéphane Wootha Richard", email = "stephane@sawup.fr"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "claude-code-sdk>=0.0.23,<0.0.24",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/stephane/claude-code-langchain"
"Bug Tracker" = "https://github.com/stephane/claude-code-langchain/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["specs"]
python_files = ["*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"