[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-langchain"
version = "0.1.0"
description = "LangChain adapter for Claude Code SDK - Cost-effective prototyping without API fees"
readme = "README.md"
authors = [
    {name = "Stéphane Wootha Richard", email = "stephane@sawup.fr"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = [
    "langchain",
    "claude",
    "anthropic",
    "llm",
    "chatbot",
    "ai",
    "claude-code",
    "prototyping",
    "cost-effective"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: LangChain",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain-core>=0.1.0",
    "claude-code-sdk>=0.0.23",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/kapp667/claude-code-sdk-langchain"
Repository = "https://github.com/kapp667/claude-code-sdk-langchain"
Issues = "https://github.com/kapp667/claude-code-sdk-langchain/issues"
Documentation = "https://github.com/kapp667/claude-code-sdk-langchain#readme"
Changelog = "https://github.com/kapp667/claude-code-sdk-langchain/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["specs"]
python_files = ["*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"